# sem_work1

./: README.md  pyproject.toml  requirements.txt
tests/: help_functions.py  test_auth.py  test_views.py
web_site/: __init__.py  auth.py  database.db  menu.py  models.py  views.py
web_site/static/css/: main_style.css
web_site/templates/: add_board.html  base.html  edit_profile.html  home.html  login.html  my_boards.html  no_board.html  signup.html  view_board.html
