[tool.poetry]
name = "sem_work1"
version = "0.1.0"
description = ""
authors = ["Pavel <pavelshumbasov2335@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-Login = "^0.5.0"
psycopg2 = "^2.9.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
